--- a/Project1_dev.ipynb
+++ b/Project1_dev.ipynb
@@ -16,13 +16,441 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modeling data with linear regression"
+    "#Libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdd47657-beca-45b4-812b-38e7ea9dcefa",
+   "metadata": {},
+   "source": [
+    "In this project, we will be reading in files that use 2010 US census data. The goal will be to first read in the data and parse it into a format we can use. Then we will write some functions to pull in a later data set. {Probably do more things too, this is a brief introduction}\n",
+    "\n",
+    "First, we read in the initial census data to examine:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0c53331e-f72f-4098-b820-e36fe5ceef83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area_name</th>\n",
+       "      <th>STCOU</th>\n",
+       "      <th>EDU010187F</th>\n",
+       "      <th>EDU010187D</th>\n",
+       "      <th>EDU010187N1</th>\n",
+       "      <th>EDU010187N2</th>\n",
+       "      <th>EDU010188F</th>\n",
+       "      <th>EDU010188D</th>\n",
+       "      <th>EDU010188N1</th>\n",
+       "      <th>EDU010188N2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EDU010194N1</th>\n",
+       "      <th>EDU010194N2</th>\n",
+       "      <th>EDU010195F</th>\n",
+       "      <th>EDU010195D</th>\n",
+       "      <th>EDU010195N1</th>\n",
+       "      <th>EDU010195N2</th>\n",
+       "      <th>EDU010196F</th>\n",
+       "      <th>EDU010196D</th>\n",
+       "      <th>EDU010196N1</th>\n",
+       "      <th>EDU010196N2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40024299</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39967624</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43993459</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44715737</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>733735</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>728234</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>727989</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>736825</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Autauga, AL</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6829</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7568</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7834</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baldwin, AL</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16417</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16465</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19961</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20699</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Barbour, AL</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5071</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5098</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5017</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5053</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 42 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Area_name  STCOU  EDU010187F  EDU010187D  EDU010187N1  EDU010187N2  \\\n",
+       "0  UNITED STATES      0           0    40024299            0            0   \n",
+       "1        ALABAMA   1000           0      733735            0            0   \n",
+       "2    Autauga, AL   1001           0        6829            0            0   \n",
+       "3    Baldwin, AL   1003           0       16417            0            0   \n",
+       "4    Barbour, AL   1005           0        5071            0            0   \n",
+       "\n",
+       "   EDU010188F  EDU010188D  EDU010188N1  EDU010188N2  ...  EDU010194N1  \\\n",
+       "0           0    39967624            0            0  ...            0   \n",
+       "1           0      728234            0            0  ...            0   \n",
+       "2           0        6900            0            0  ...            0   \n",
+       "3           0       16465            0            0  ...            0   \n",
+       "4           0        5098            0            0  ...            0   \n",
+       "\n",
+       "   EDU010194N2  EDU010195F  EDU010195D  EDU010195N1  EDU010195N2  EDU010196F  \\\n",
+       "0            0           0    43993459            0            0           0   \n",
+       "1            0           0      727989            0            0           0   \n",
+       "2            0           0        7568            0            0           0   \n",
+       "3            0           0       19961            0            0           0   \n",
+       "4            0           0        5017            0            0           0   \n",
+       "\n",
+       "   EDU010196D  EDU010196N1  EDU010196N2  \n",
+       "0    44715737            0            0  \n",
+       "1      736825            0            0  \n",
+       "2        7834            0            0  \n",
+       "3       20699            0            0  \n",
+       "4        5053            0            0  \n",
+       "\n",
+       "[5 rows x 42 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import_data = pd.read_csv(\"EDU01a.csv\")\n",
+    "import_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59ef01a-ed8f-4ebc-9529-3ceeaac7b6fb",
+   "metadata": {},
+   "source": [
+    "We only want to maintain a few columns with specific parameters: we want 'Area_name', 'STCOU', and any column that ends with the letter 'D'. Since we want to select all columns ending in \"D\", we are locating those names first: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d25da3b7-3495-44dc-aa9d-cfc676a9d6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols=list(import_data)\n",
+    "col_names=[]\n",
+    "for x in cols:\n",
+    "    if x.endswith(\"D\"):\n",
+    "        col_names.append(x)\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4a5f02-1bfa-44d7-8ccc-30efc7089077",
+   "metadata": {},
+   "source": [
+    "Creating a list of desired columns for our modified data frame by using specific coumn names from the import data and by unpacking the list of column names that end with \"D\" that was generated in the previous line. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5fa3d3f6-fa55-405e-b48f-8582c4862e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_list=['Area_name', 'STCOU', *col_names]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "562723c1-a0f4-430a-8f39-20572c4aa5ad",
+   "metadata": {},
+   "source": [
+    "Now, using the `.loc()` method and the desired columns found in 'col_list', a new dataframe is generated. A preview of this dataframe can be seen by calling `census_df.head()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "14990904-30fb-48b5-abf8-da1b5cdf602b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area_name</th>\n",
+       "      <th>STCOU</th>\n",
+       "      <th>EDU010187D</th>\n",
+       "      <th>EDU010188D</th>\n",
+       "      <th>EDU010189D</th>\n",
+       "      <th>EDU010190D</th>\n",
+       "      <th>EDU010191D</th>\n",
+       "      <th>EDU010192D</th>\n",
+       "      <th>EDU010193D</th>\n",
+       "      <th>EDU010194D</th>\n",
+       "      <th>EDU010195D</th>\n",
+       "      <th>EDU010196D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40024299</td>\n",
+       "      <td>39967624</td>\n",
+       "      <td>40317775</td>\n",
+       "      <td>40737600</td>\n",
+       "      <td>41385442</td>\n",
+       "      <td>42088151</td>\n",
+       "      <td>42724710</td>\n",
+       "      <td>43369917</td>\n",
+       "      <td>43993459</td>\n",
+       "      <td>44715737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>733735</td>\n",
+       "      <td>728234</td>\n",
+       "      <td>730048</td>\n",
+       "      <td>728252</td>\n",
+       "      <td>725541</td>\n",
+       "      <td>726150</td>\n",
+       "      <td>728014</td>\n",
+       "      <td>730509</td>\n",
+       "      <td>727989</td>\n",
+       "      <td>736825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Autauga, AL</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>6829</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>6920</td>\n",
+       "      <td>6847</td>\n",
+       "      <td>7008</td>\n",
+       "      <td>7137</td>\n",
+       "      <td>7152</td>\n",
+       "      <td>7381</td>\n",
+       "      <td>7568</td>\n",
+       "      <td>7834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baldwin, AL</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>16417</td>\n",
+       "      <td>16465</td>\n",
+       "      <td>16799</td>\n",
+       "      <td>17054</td>\n",
+       "      <td>17479</td>\n",
+       "      <td>17983</td>\n",
+       "      <td>18735</td>\n",
+       "      <td>19384</td>\n",
+       "      <td>19961</td>\n",
+       "      <td>20699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Barbour, AL</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>5071</td>\n",
+       "      <td>5098</td>\n",
+       "      <td>5068</td>\n",
+       "      <td>5156</td>\n",
+       "      <td>5173</td>\n",
+       "      <td>5252</td>\n",
+       "      <td>5135</td>\n",
+       "      <td>5111</td>\n",
+       "      <td>5017</td>\n",
+       "      <td>5053</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Area_name  STCOU  EDU010187D  EDU010188D  EDU010189D  EDU010190D  \\\n",
+       "0  UNITED STATES      0    40024299    39967624    40317775    40737600   \n",
+       "1        ALABAMA   1000      733735      728234      730048      728252   \n",
+       "2    Autauga, AL   1001        6829        6900        6920        6847   \n",
+       "3    Baldwin, AL   1003       16417       16465       16799       17054   \n",
+       "4    Barbour, AL   1005        5071        5098        5068        5156   \n",
+       "\n",
+       "   EDU010191D  EDU010192D  EDU010193D  EDU010194D  EDU010195D  EDU010196D  \n",
+       "0    41385442    42088151    42724710    43369917    43993459    44715737  \n",
+       "1      725541      726150      728014      730509      727989      736825  \n",
+       "2        7008        7137        7152        7381        7568        7834  \n",
+       "3       17479       17983       18735       19384       19961       20699  \n",
+       "4        5173        5252        5135        5111        5017        5053  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " census_df=import_data.loc[:,col_list]\n",
+    " census_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c53331e-f72f-4098-b820-e36fe5ceef83",
+   "id": "67d2e5bd-cc30-472b-9bb0-439d7579fdc3",
    "metadata": {},
    "outputs": [],
    "source": []
