--- a/Project1_dev.ipynb
+++ b/Project1_dev.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c0424b",
+   "id": "f2aee845",
    "metadata": {},
    "source": [
     "## Part 1: Data Processing"
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04e2cf7",
+   "id": "d0f344ee",
    "metadata": {},
    "source": [
     "We want to select only certain columns, but we first want to rename our column Area_name as area_name. We will do this using the .rename() method."
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18dc54b3",
+   "id": "fff4dc62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
    "id": "562723c1-a0f4-430a-8f39-20572c4aa5ad",
    "metadata": {},
    "source": [
-    "Now, using the `.loc()` method and the desired columns found in 'col_list', a new dataframe is generated. A preview of this dataframe can be seen by calling `census_df.head()`"
+    "Now, using the `.loc()` method and the desired columns found in 'col_list', we add those columns to our dataframe. A preview of this dataframe can be seen by calling `census_df.head()`"
    ]
   },
   {
@@ -474,9 +474,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8447e641",
+   "metadata": {},
+   "source": [
+    "Now, we will convert our data into long format where each row has only one enrollment value for the column area_name. This will help to get rid of multiple observations in a given row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "81829fd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_name</th>\n",
+       "      <th>STCOU</th>\n",
+       "      <th>info</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>40024299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>733735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Autauga, AL</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>6829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baldwin, AL</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>16417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Barbour, AL</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>5071</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       area_name  STCOU        info     value\n",
+       "0  UNITED STATES      0  EDU010187D  40024299\n",
+       "1        ALABAMA   1000  EDU010187D    733735\n",
+       "2    Autauga, AL   1001  EDU010187D      6829\n",
+       "3    Baldwin, AL   1003  EDU010187D     16417\n",
+       "4    Barbour, AL   1005  EDU010187D      5071"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_df = census_df.melt(id_vars = [\"area_name\", \"STCOU\"], var_name = \"info\")\n",
+    "census_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9580c14",
+   "metadata": {},
+   "source": [
+    "Each variable in the info column holds important information. The last two characters before the \"D\" represent the year. We want to create a new column called \"year\" that stores the year. The first three characters represent the survey and the next four represent the type of value you have from the survey. We want to capture those first six characters in another column called \"measurement.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "aa2217ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_df[\"year\"] = np.nan\n",
+    "census_df[\"measurement\"] = np.nan\n",
+    "for row in range(len(census_df)):\n",
+    "    thing = census_df.loc[row, \"info\"]\n",
+    "    #print(thing)\n",
+    "    measure = thing[0:7]\n",
+    "    #print(measure)\n",
+    "    yr = \"19\" + str(thing[7:9])\n",
+    "    #print(yr)\n",
+    "    census_df.loc[row,\"year\"] = int(yr)\n",
+    "    census_df.loc[row,\"measurement\"] = str(measure)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "44836490",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_name</th>\n",
+       "      <th>STCOU</th>\n",
+       "      <th>info</th>\n",
+       "      <th>value</th>\n",
+       "      <th>year</th>\n",
+       "      <th>measurement</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UNITED STATES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>40024299</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>EDU0101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALABAMA</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>733735</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>EDU0101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Autauga, AL</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>6829</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>EDU0101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Baldwin, AL</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>16417</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>EDU0101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Barbour, AL</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>EDU010187D</td>\n",
+       "      <td>5071</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>EDU0101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       area_name  STCOU        info     value    year measurement\n",
+       "0  UNITED STATES      0  EDU010187D  40024299  1987.0     EDU0101\n",
+       "1        ALABAMA   1000  EDU010187D    733735  1987.0     EDU0101\n",
+       "2    Autauga, AL   1001  EDU010187D      6829  1987.0     EDU0101\n",
+       "3    Baldwin, AL   1003  EDU010187D     16417  1987.0     EDU0101\n",
+       "4    Barbour, AL   1005  EDU010187D      5071  1987.0     EDU0101"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d2e5bd-cc30-472b-9bb0-439d7579fdc3",
+   "id": "da44a4c4",
    "metadata": {},
    "outputs": [],
    "source": []
