That was the issue???? we switched train and test data to get dimensional errors??????

--- a/Project1_Official.ipynb
+++ b/Project1_Official.ipynb
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 107,
    "id": "ca9dfd3f-0319-45b8-b55b-04eee29d8174",
    "metadata": {},
    "outputs": [],
@@ -1772,162 +1772,7 @@
     "    preds = reg.predict(x_test)\n",
     "    MSE = mean_squared_error(y_test,preds)\n",
     "    \n",
-    "    return(MSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "d7c957fd-fdad-40b7-8c07-7060549dc0f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#experimenting\n",
-    "def mse_LR2(predictors, response, last_year):\n",
-    "    \n",
-    "    x_train=predictors.loc[predictors['year'] <=(last_year)]\n",
-    "    x_test=predictors.loc[predictors['year']==last_year+1]\n",
-    "    y_test = response.loc[predictors['year'] <=(last_year)]\n",
-    "    y_train = response.loc[predictors['year']==last_year+1]\n",
-    "    reg=linear_model.LinearRegression()\n",
-    "    reg.fit(X=x_train, y=y_train)\n",
-    "    preds = reg.predict(x_test)\n",
-    "    MSE = mean_squared_error(y_test,preds)\n",
-    "    \n",
-    "    return(MSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "6a4451c4-b3c7-4a3a-b82e-e6b276429ccb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictors = combined_state[[\"year\"]]\n",
-    "response = combined_state[[\"enrollment\"]]\n",
-    "last_year = 1989"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "a704c11f-de0b-4472-a40b-42b7e09748d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train=predictors.loc[predictors['year'] <=(last_year)]\n",
-    "x_test=predictors.loc[predictors['year']==last_year+1]\n",
-    "y_train = response.loc[predictors['year'] <=(last_year)]\n",
-    "y_test= response.loc[predictors['year']==last_year+1]\n",
-    "reg=linear_model.LinearRegression()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "c2c6489b-38f9-404a-b1db-bca106b7936b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "726904969770.1512\n"
-     ]
-    }
-   ],
-   "source": [
-    "reg.fit(X=x_train, y=y_train)\n",
-    "preds = reg.predict(x_test)\n",
-    "MSE = mean_squared_error(y_test,preds)\n",
-    "\n",
-    "print(MSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "a12c7e37-b1a3-45cd-ae5e-1e4db407f85d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1040, 1)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_type_test= pd.DataFrame(combined_state['enrollment'])\n",
-    "y_type_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "73e9ee8d-3181-4952-9d40-a25ca22e5583",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(156, 11)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_train_test=combined_state.loc[combined_state['year'] <=1989]\n",
-    "x_train_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "227b8329-8547-4a98-a0c6-87deddd03ab0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[733735 1987.0 'Division 6' ... 0 0 1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_test=x_train_test.values.reshape(-1)\n",
-    "print(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "abe956e3-9325-467c-a638-60aaeae30a01",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(52, 11)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_test_test=combined_state.loc[combined_state['year'] == 1990]\n",
-    "x_test_test.shape"
+    "    return(round(MSE,2))"
    ]
   },
   {
@@ -1948,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 108,
    "id": "6b3465ad",
    "metadata": {},
    "outputs": [
@@ -1960,7 +1805,7 @@
        "       2005., 2006.])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 128,
    "id": "9d7798b3",
    "metadata": {},
    "outputs": [],
@@ -1980,29 +1825,27 @@
     "    \n",
     "    years_list = list(combined_state.year.unique())\n",
     "    MSE = 0\n",
-    "    for first_year in years_list:\n",
-    "        if first_year < 1989.0:\n",
-    "            print(\"Error: you have not provided more than three years to calculate MSE\")\n",
-    "            continue\n",
-    "        else:\n",
-    "            MSE += mse_LR(predictors, response, first_year)\n",
+    "    if first_year < 1989.0:\n",
+    "        print(\"Error: you have not provided more than three years to calculate MSE\") \n",
+    "    else:\n",
+    "        MSE += mse_LR(predictors, response, first_year)\n",
     "            \n",
-    "    return(\"MSE:\", MSE)    "
+    "    return(\"MSE:\", round(MSE,2))    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 129,
    "id": "e8da5cb3-0dd9-4b01-b1de-bdb45313fa89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "726904969770.1512"
+       "726904969770.15"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,51 +1864,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 130,
    "id": "ae059e62",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: you have not provided more than three years to calculate MSE\n",
-      "Error: you have not provided more than three years to calculate MSE\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Found array with 0 sample(s) (shape=(0, 1)) while a minimum of 1 is required by LinearRegression.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[104], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m SLR_MSE \u001b[38;5;241m=\u001b[39m \u001b[43msum_MSE\u001b[49m\u001b[43m(\u001b[49m\u001b[43mSLR_predictors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mboth_response\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfirst_year\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1987\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m SLR_MSE\n",
-      "Cell \u001b[0;32mIn[101], line 10\u001b[0m, in \u001b[0;36msum_MSE\u001b[0;34m(predictors, response, first_year)\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 10\u001b[0m         MSE \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mmse_LR\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredictors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfirst_year\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMSE:\u001b[39m\u001b[38;5;124m\"\u001b[39m, MSE)\n",
-      "Cell \u001b[0;32mIn[100], line 9\u001b[0m, in \u001b[0;36mmse_LR\u001b[0;34m(predictors, response, last_year)\u001b[0m\n\u001b[1;32m      7\u001b[0m reg\u001b[38;5;241m=\u001b[39mlinear_model\u001b[38;5;241m.\u001b[39mLinearRegression()\n\u001b[1;32m      8\u001b[0m reg\u001b[38;5;241m.\u001b[39mfit(X\u001b[38;5;241m=\u001b[39mx_train, y\u001b[38;5;241m=\u001b[39my_train)\n\u001b[0;32m----> 9\u001b[0m preds \u001b[38;5;241m=\u001b[39m \u001b[43mreg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m MSE \u001b[38;5;241m=\u001b[39m mean_squared_error(y_test,preds)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(MSE)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sklearn/linear_model/_base.py:355\u001b[0m, in \u001b[0;36mLinearModel.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    341\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[1;32m    342\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    343\u001b[0m \u001b[38;5;124;03m    Predict using the linear model.\u001b[39;00m\n\u001b[1;32m    344\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[38;5;124;03m        Returns predicted values.\u001b[39;00m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 355\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_decision_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sklearn/linear_model/_base.py:338\u001b[0m, in \u001b[0;36mLinearModel._decision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_decision_function\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[1;32m    336\u001b[0m     check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m--> 338\u001b[0m     X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccept_sparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcsr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcsc\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcoo\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m safe_sparse_dot(X, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcoef_\u001b[38;5;241m.\u001b[39mT, dense_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mintercept_\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sklearn/base.py:535\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    533\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation should be done on X, y or both.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    534\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[0;32m--> 535\u001b[0m     X \u001b[38;5;241m=\u001b[39m \u001b[43mcheck_array\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mX\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mcheck_params\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    536\u001b[0m     out \u001b[38;5;241m=\u001b[39m X\n\u001b[1;32m    537\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sklearn/utils/validation.py:929\u001b[0m, in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    927\u001b[0m     n_samples \u001b[38;5;241m=\u001b[39m _num_samples(array)\n\u001b[1;32m    928\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n_samples \u001b[38;5;241m<\u001b[39m ensure_min_samples:\n\u001b[0;32m--> 929\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    930\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound array with \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m sample(s) (shape=\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m) while a\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    931\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m minimum of \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m is required\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    932\u001b[0m             \u001b[38;5;241m%\u001b[39m (n_samples, array\u001b[38;5;241m.\u001b[39mshape, ensure_min_samples, context)\n\u001b[1;32m    933\u001b[0m         )\n\u001b[1;32m    935\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ensure_min_features \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m array\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m    936\u001b[0m     n_features \u001b[38;5;241m=\u001b[39m array\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n",
-      "\u001b[0;31mValueError\u001b[0m: Found array with 0 sample(s) (shape=(0, 1)) while a minimum of 1 is required by LinearRegression."
-     ]
+     "data": {
+      "text/plain": [
+       "('MSE:', 772730062771.74)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "SLR_MSE = sum_MSE(SLR_predictors, both_response, first_year = 1987)\n",
+    "SLR_MSE = sum_MSE(SLR_predictors, both_response, first_year = 1990)\n",
     "SLR_MSE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "b57d114f-3031-406b-a8d5-d8b7fd5b9754",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('MSE:', 521789875671.83)"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "MLR_MSE = sum_MSE(MLR_predictors, both_response, first_year = 1987)\n",
+    "MLR_MSE = sum_MSE(MLR_predictors, both_response, first_year = 1989)\n",
     "MLR_MSE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a61e523-a156-4d4b-9dfe-6a80c597f029",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
